--- a/cssSandbox/20_selectors.html
+++ b/cssSandbox/20_selectors.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSS Selectors</title>
   <Style>
-    .heading-green{
+    .heading-primary{
       color: green;
     }
   </Style>
 </head>
 <body>
   <div>
-    <h2 class="heading-green">Welcome</h2>
+    <h2 class="heading-primary">Welcome</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat magni laborum reprehenderit fuga asperiores cum vel, suscipit quo velit eos.</p>
 
   </div>
