--- a/cssSandbox/02_selectors.html
+++ b/cssSandbox/02_selectors.html
@@ -6,18 +6,45 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSS Selectors</title>
   <Style>
+    /* element selector */
+    body{
+      background-color: #333;
+    }
+    
+    /* . is for 'class'es */
     .heading-primary{
       color: green;
+    }
+    /* # is for 'id's */
+    #welcome{
+      background-color: #f4f4f4;
+      
+    }
+
+    /* multiple selector */
+    #welcome , #about {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
+    }
+
+    /* nested selector */
+    #welcome p {
+      font-size: 20px; /*default is 16*/
+    }
+
+    #about{
+      color: white;
     }
   </Style>
 </head>
 <body>
-  <div>
-    <h2 class="heading-primary">Welcome</h2>
+  <div id="welcome">
+    <h2 class="heading-primary" >Welcome</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat magni laborum reprehenderit fuga asperiores cum vel, suscipit quo velit eos.</p>
 
   </div>
-  <div>
+  <div id="about">
     <h2>About:</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic officiis vel fuga optio, laborum non aliquid pariatur accusantium culpa ut.</p>
   </div>
