hotel nav started

--- a/03_project_hotel/index.html
+++ b/03_project_hotel/index.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Tehran Grand Hotel | Welcome</title>
+  <meta name="description" content="The best place for to be while you are in tehran">
+  <meta name="keywords" content="hotel,tehran hotel,iran hotel,tehran turism">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Tehran Grand Hotel | Tehran Hotel</title>
 </head>
 <body>
-  
+  <head>
+    <nav id="navbar">    
+      <h1 id="logo"><a href="index.html">TGH</a></h1>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact us</a></li>
+      </ul>   
+    </nav>
+  </head>
 </body>
 </html>
