--- a/03_project_hotel/index.html
+++ b/03_project_hotel/index.html
@@ -11,13 +11,15 @@
 </head>
 <body>
   <head>
-    <nav id="navbar">    
-      <h1 id="logo"><a href="index.html">TGH</a></h1>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact us</a></li>
-      </ul>   
+    <nav id="navbar">  
+      <div id="container">
+        <h1 id="logo"><a href="index.html">TGH</a></h1>
+        <ul>
+          <li><a class="current" href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact us</a></li>
+        </ul>   
+      </div>
     </nav>
   </head>
 </body>
