--- a/03_project_hotel/index.html
+++ b/03_project_hotel/index.html
@@ -12,7 +12,7 @@
 <body>
   <head>
     <nav id="navbar">  
-      <div id="container">
+      <div class="container">
         <h1 id="logo"><a href="index.html">TGH</a></h1>
         <ul>
           <li><a class="current" href="index.html">Home</a></li>
@@ -20,7 +20,17 @@
           <li><a href="contact.html">Contact us</a></li>
         </ul>   
       </div>
+
+      
+      
     </nav>
+    <div id="showcase">
+      <div class="container">
+        <h1><span>Enjoy</span> Your Stay</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolorum laborum,doloremque minus nulla voluptatum assumenda amet? Minus, maiores saepe?</p>
+        <a href="about.html" class="btn,btn-dark" > About Our Hotel</a>
+      </div>
+    </div>
   </head>
 </body>
 </html>
