hotel project:main info 50 %

--- a/03_project_hotel/index.html
+++ b/03_project_hotel/index.html
@@ -20,17 +20,24 @@
           <li><a href="contact.html">Contact us</a></li>
         </ul>   
       </div>
-
-      
-      
     </nav>
     <div id="showcase">
       <div class="container">
-        <h1><span>Enjoy</span> Your Stay</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolorum laborum,doloremque minus nulla voluptatum assumenda amet? Minus, maiores saepe?</p>
-        <a href="about.html" class="btn,btn-dark" > About Our Hotel</a>
+        <div id="showcase-content">
+          <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+          <p class="lead"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolorum laborum,doloremque minus nulla voluptatum assumenda amet? Minus, maiores saepe?</p>
+          <a href="about.html" class="btn-dark" > About Our Hotel</a>
+        </div> 
       </div>
     </div>
   </head>
+  <section id="home-info">
+    <div id="info-image"></div>
+    <div id="info-content" class="bg-dark">
+      <h1><span class="text-primary">History </span>of Our Hotel</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi facilis, beatae incidunt repellat odio quibusdam omnis similique illo perspiciatis, nesciunt impedit expedita. Ad, incidunt? Eveniet aliquam quae, nesciunt quaerat libero nostrum nobis architecto voluptatum rerum quas laboriosam quam magnam exercitationem.</p>
+      <a href="about.html" class="btn-light"> Read More</a>
+    </div>
+  </section>
 </body>
 </html>
