--- a/03_project_hotel/about.html
+++ b/03_project_hotel/about.html
@@ -12,7 +12,7 @@
 <body>
   <head>
     <nav id="navbar">  
-      <div id="container">
+      <div class="container">
         <h1 id="logo"><a href="index.html">TGH</a></h1>
         <ul>
           <li><a href="index.html">Home</a></li>
