hotel project:indev.html finished

--- a/03_project_hotel/index.html
+++ b/03_project_hotel/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="The best place for to be while you are in tehran">
   <meta name="keywords" content="hotel,tehran hotel,iran hotel,tehran turism">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>Tehran Grand Hotel | Tehran Hotel</title>
 </head>
@@ -38,6 +39,30 @@
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi facilis, beatae incidunt repellat odio quibusdam omnis similique illo perspiciatis, nesciunt impedit expedita. Ad, incidunt? Eveniet aliquam quae, nesciunt quaerat libero nostrum nobis architecto voluptatum rerum quas laboriosam quam magnam exercitationem.</p>
       <a href="about.html" class="btn-light"> Read More</a>
     </div>
+    
+    
   </section>
+  <section id="home-features">
+    <div class="home-feature bg-light">
+      <i class="fas fa-hotel fa-3x"></i>
+      <h3>Great Location</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates cum accusantium eaqueipsa praesentium quaerat.</p>
+    </div>
+    <div class="home-feature bg-primary">
+      <i class="fas fa-utensils fa-3x"></i>
+      <h3>Free Meals</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora laborum architecto, harumincidunt sequi earum?</p>
+    </div>
+    <div class="home-feature bg-light">
+      <i class="fas fa-dumbbell fa-3x"></i>
+      <h3>Fitness Rooms</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur ut, doloribus aliasvelit ipsum numquam?</p>
+    </div>
+  </section>
+  <footer class="bg-dark">
+    <div id="home-footer" class="container">
+      <p>Tehran Grand Hotel, Soori Facilities &copy;, All Rights Reserved</p>
+    </div>
+  </footer>
 </body>
 </html>
