hotel project:about page 50%

--- a/03_project_hotel/about.html
+++ b/03_project_hotel/about.html
@@ -22,5 +22,23 @@
       </div>
     </nav>
   </head>
+
+  <section id="about-info" class="bg-light">
+    <div class="container">
+      <div id="info-text">
+        <h1><span class="text-primary">About</span> Tehran Grand Hotel</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores molestiae, hic mollitia modi exercitationem fugit blanditiis esse earum reiciendis ipsam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, natus.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolorem cumque similique quibusdam fugit sed.</p>
+      </div>
+      <div id="info-picture"></div>
+    </div>
+    
+  </section>
+  <div class="clr"></div>
+  <footer id="home-footer" > 
+    <p>Tehran Grand Hotel, Soori Facilities &copy;, All Rights Reserved</p> 
+  </footer>
 </body>
 </html>
