--- a/03_project_hotel/contact.html
+++ b/03_project_hotel/contact.html
@@ -22,5 +22,8 @@
       </div>
     </nav>
   </head>
+  <footer id="home-footer" > 
+    <p>Tehran Grand Hotel, Soori Facilities &copy;, All Rights Reserved</p> 
+  </footer>
 </body>
 </html>
