--- a/03_project_hotel/index.html
+++ b/03_project_hotel/index.html
@@ -59,10 +59,8 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur ut, doloribus aliasvelit ipsum numquam?</p>
     </div>
   </section>
-  <footer class="bg-dark">
-    <div id="home-footer" class="container">
-      <p>Tehran Grand Hotel, Soori Facilities &copy;, All Rights Reserved</p>
-    </div>
+  <footer id="home-footer" > 
+    <p>Tehran Grand Hotel, Soori Facilities &copy;, All Rights Reserved</p> 
   </footer>
 </body>
 </html>
