--- a/03_project_hotel/about.html
+++ b/03_project_hotel/about.html
@@ -23,7 +23,7 @@
     </nav>
   </head>
 
-  <section id="about-info" class="bg-light">
+  <section id="about-info" class="bg-light py-3">
     <div class="container">
       <div id="info-text">
         <h1><span class="text-primary">About</span> Tehran Grand Hotel</h1>
@@ -32,11 +32,29 @@
         </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolorem cumque similique quibusdam fugit sed.</p>
       </div>
-      <div id="info-picture"></div>
-    </div>
-    
+      <div id="info-picture">
+        <img src="./img/photo-2.jpg" alt="hotelimage">
+      </div>
+    </div>   
   </section>
-  <div class="clr"></div>
+  <section id="about-comments" class="bg-light">
+    <div class="container">
+      <h1 class="text-light">What Our Guests Say</h1>
+      <div class="about-guest bg-primary">
+        <img src="./img/person-1.jpg" alt="guest-picture1">
+        <div class="guest-comment ">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!</p>
+        </div>
+      </div>
+      <div class="about-guest bg-primary">
+        <img src="./img/person-2.jpg" alt="guest-picture2">
+        <div class="guest-comment ">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!</p>
+        </div>
+      </div>
+    </div>
+    <div style="height: 100px;"></div>
+  </section>
   <footer id="home-footer" > 
     <p>Tehran Grand Hotel, Soori Facilities &copy;, All Rights Reserved</p> 
   </footer>
