hotel project: all done

--- a/03_project_hotel/contact.html
+++ b/03_project_hotel/contact.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="The best place for to be while you are in tehran">
   <meta name="keywords" content="hotel,tehran hotel,iran hotel,tehran turism">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>Tehran Grand Hotel | Tehran Hotel</title>
 </head>
@@ -22,6 +23,25 @@
       </div>
     </nav>
   </head>
+  <section id="contact-form" class="container text-dark">
+    <h1><span class="text-primary">Contact</span> us</h1>  
+    <form action="contact.html" method="GET">
+      <p>Please fill out the form below to contact us</p>
+      <div class="form-group">
+        <label for="customer-name">Name:</label>
+        <input type="text" id="customer-name" placeholder="eg: Sally">
+      </div>
+      <div class="form-group">
+        <label for="customer-email">Email:</label>
+        <input type="email" id="customer-email" placeholder="eg: someone@mailserver.com">
+      </div>
+      <div class="form-group">
+        <label for="customer-message">Message:</label>
+        <textarea name="message" id="customer-message" cols="30" rows="10"></textarea>
+      </div>
+      <button type="submit" class="btn-dark">Submit</button>
+    </form>
+  </section>
   <footer id="home-footer" > 
     <p>Tehran Grand Hotel, Soori Facilities &copy;, All Rights Reserved</p> 
   </footer>
