--- a/03_project_hotel/contact.html
+++ b/03_project_hotel/contact.html
@@ -42,6 +42,26 @@
       <button type="submit" class="btn-dark">Submit</button>
     </form>
   </section>
+  <section id="contact-info" class="bg-dark">
+    <div class="container">
+      <div class="contact-info-detail">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Location</h3>
+        <p>1020 Vienna, Austria</p>
+      </div>
+      <div class="contact-info-detail">
+        <i class="fas fa-phone fa-3x"></i>
+        <h3>Phone</h3>
+        <p>(617) 555-5555</p>
+      </div>
+      <div class="contact-info-detail">
+        <i class="fas fa-envelope fa-3x"></i>
+        <h3>Email Address
+        </h3>
+        <p>erfan.soori.init@gmail.com</p>
+      </div>
+    </div>
+  </section>
   <footer id="home-footer" > 
     <p>Tehran Grand Hotel, Soori Facilities &copy;, All Rights Reserved</p> 
   </footer>
