hotel project: responsive started

--- a/03_project_hotel/index.html
+++ b/03_project_hotel/index.html
@@ -8,6 +8,8 @@
   <meta name="keywords" content="hotel,tehran hotel,iran hotel,tehran turism">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+  <link rel="stylesheet" media="print" href="css/print.css">
   <title>Tehran Grand Hotel | Tehran Hotel</title>
 </head>
 <body>
