hotel project: responsive finished

--- a/03_project_hotel/about.html
+++ b/03_project_hotel/about.html
@@ -7,6 +7,8 @@
   <meta name="description" content="The best place for to be while you are in tehran">
   <meta name="keywords" content="hotel,tehran hotel,iran hotel,tehran turism">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+  <link rel="stylesheet" media="print" href="css/print.css">
   <title>Tehran Grand Hotel | Tehran Hotel</title>
 </head>
 <body>
